--- a/templates/aptly.service.j2
+++ b/templates/aptly.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 RuntimeDirectory=aptly
-ExecStart=/usr/bin/aptly serve -config=/etc/aptly.conf -listen={{ aptly_host }}:{{ aptly_port }}
+ExecStart=/usr/bin/aptly serve -config={{ aptly_conf_path }}/aptly.conf -listen={{ aptly_host }}:{{ aptly_port }}
 ExecStop=/bin/kill -s QUIT $MAINPID
 User={{ aptly_user }}
 
